--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,8 +9,7 @@ apply plugin: 'kotlin'
 
 
 dependencies {
-    compile project(':proto')
-    compile project(':common')
+    compile "io.grpc:grpc-all:${grpcVersion}"
     compile "org.jetbrains.kotlin:kotlin-stdlib:1.0.3"
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
