--- a/proto/build.gradle
+++ b/proto/build.gradle
@@ -14,6 +14,7 @@ dependencies {
 }
 
 protobuf {
+    generatedFilesBaseDir = "$projectDir/src/generated"
     protoc {
         artifact = 'com.google.protobuf:protoc:3.1.0'
     }
@@ -61,7 +62,7 @@ idea {
 //        excludeDirs += files { new File("${projectDir}/build").listFiles( { d, name -> name != 'generated' } as FilenameFilter)}
 //        excludeDirs -= file("${projectDir}/build")
 
-        sourceDirs += file("${projectDir}/build/generated/source/proto/main/java");
-        sourceDirs += file("${projectDir}/build/generated/source/proto/main/grpc");
+        sourceDirs += file("${projectDir}/src/generated/main/java");
+        sourceDirs += file("${projectDir}/src/generated/main/grpc");
     }
 }
