--- a/user-info-service/build.gradle
+++ b/user-info-service/build.gradle
@@ -10,6 +10,7 @@ apply plugin: 'kotlin'
 
 dependencies {
     compile project(':proto')
+    compile project(':common')
     compile "org.jetbrains.kotlin:kotlin-stdlib:1.0.3"
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
