--- a/client/build.gradle
+++ b/client/build.gradle
@@ -6,6 +6,9 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'application'
+
+mainClassName = "com.vjames19.demo.grpc.client.ClientKt"
 
 dependencies {
     compile project(':proto')
