--- a/user-info-service/build.gradle
+++ b/user-info-service/build.gradle
@@ -6,7 +6,9 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'application'
 
+mainClassName = "com.vjames19.demo.grpc.UserInfoServiceKt"
 
 dependencies {
     compile project(':proto')
