--- a/user-service/build.gradle
+++ b/user-service/build.gradle
@@ -6,11 +6,13 @@ buildscript {
 
 apply plugin: 'java'
 apply plugin: 'kotlin'
+apply plugin: 'application'
 
-
+mainClassName = "com.vjames19.demo.grpc.UserServiceKt"
 
 dependencies {
-    compile "io.grpc:grpc-all:${grpcVersion}"
+    compile project(':proto')
+    compile project(':common')
     compile "org.jetbrains.kotlin:kotlin-stdlib:1.0.3"
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
