--- a/client/build.gradle
+++ b/client/build.gradle
@@ -13,6 +13,8 @@ mainClassName = "com.vjames19.demo.grpc.client.ClientKt"
 dependencies {
     compile project(':proto')
     compile project(':common')
-    compile "org.jetbrains.kotlin:kotlin-stdlib:1.0.3"
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+run.doFirst {
+    jvmArgs = ['-Ddemo.zipkin.host=localhost']
 }
