--- a/common/build.gradle
+++ b/common/build.gradle
@@ -12,5 +12,6 @@ apply plugin: 'kotlin'
 dependencies {
     compile "io.grpc:grpc-all:${grpcVersion}"
     compile "org.jetbrains.kotlin:kotlin-stdlib:1.0.3"
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile "io.zipkin.brave:brave-grpc:$braveVersion"
+    compile 'io.zipkin.reporter:zipkin-sender-okhttp3:0.6.9'
 }
