--- a/user-projects-service/build.gradle
+++ b/user-projects-service/build.gradle
@@ -16,3 +16,7 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib:1.0.3"
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+run.doFirst {
+    jvmArgs = ['-Ddemo.zipkin.host=localhost']
+}
