almost there with docker

--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ subprojects {
         repositories {
             jcenter()
         }
+
+        dependencies {
+            classpath 'se.transmode.gradle:gradle-docker:1.2'
+        }
     }
 
     repositories {
