--- a/user-info-service/build.gradle
+++ b/user-info-service/build.gradle
@@ -7,6 +7,16 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: 'docker'
+
+docker {
+//    baseImage = "openjdk:8-jdk-alpine"
+    maintainer = "Victor"
+}
+
+distDocker {
+    exposePort 8080
+}
 
 mainClassName = "com.vjames19.demo.grpc.UserInfoServiceKt"
 
